fixed Extra space on homepage issue

--- a/union_budget_board/static/css/base.css
+++ b/union_budget_board/static/css/base.css
@@ -3,6 +3,11 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.container.section-3col-box-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
 .section-3col-boxes .white-box {
     position: relative;
     margin: 0 0 25px;
